Credential added to attestation response. ACR can set with user reg in bank KC
