# examples/IdentityProviders/KeyCloak/passkey_spi/src/main/java/com/yubicolabs/keycloak/models/AttestationResponseCredential.java
@@ -1,0 +1,47 @@
+package com.yubicolabs.keycloak.models;
+
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonProperty;
+
+import lombok.Builder;
+import lombok.Value;
+
+@Value
+@Builder
+public class AttestationResponseCredential {
+  @JsonProperty("id")
+  String id;
+
+  @JsonProperty("type")
+  String type;
+
+  @JsonProperty("nickName")
+  String nickName;
+
+  @JsonProperty("registrationTime")
+  String registrationTime;
+
+  @JsonProperty("lastUsedTime")
+  String lastUsedTime;
+
+  @JsonProperty("iconURI")
+  String iconURI;
+
+  @JsonProperty("isHighAssurance")
+  boolean isHighAssurance;
+
+  @JsonCreator
+  public AttestationResponseCredential(@JsonProperty("id") String id, @JsonProperty("type") String type,
+      @JsonProperty("nickName") String nickName, @JsonProperty("registrationTime") String registrationTime,
+      @JsonProperty("lastUsedTime") String lastUsedTime, @JsonProperty("iconURI") String iconURI,
+      @JsonProperty("isHighAssurance") boolean isHighAssurance) {
+    this.id = id;
+    this.type = type;
+    this.nickName = nickName;
+    this.registrationTime = registrationTime;
+    this.lastUsedTime = lastUsedTime;
+    this.iconURI = iconURI;
+    this.isHighAssurance = isHighAssurance;
+  }
+
+}
